--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <h1> <em> Halla folkens! </em> nå skal jeg vise dere noen jeskla vittige <strong> bilder </strong>. </h1>
     <h2> Numero uno </h2>
     <iframe src="https://giphy.com/embed/OQY2tMzBO8IoMCJdZV" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-    </body>
+    <h2> -. ..- -- -- . .-. / - --- </h2>
+    <iframe src="https://giphy.com/embed/3ohhwzeceMRpHj56uY" width="480" height="309" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+    <p> her er noen fete ting. </p>
+    <ol>
+      <li> kake
+      <li> jul  
+  </body>
  </html>
