--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <li> jul
         <h3> en god russesang </h3>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/9KhZd5Z2PNk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <button> href="button">klikk meg!</button>
+        <button type="button">klikk meg!</button>
   </body>
  </html>
