--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
         <h3> en god russesang </h3>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/9KhZd5Z2PNk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <button type="button">klikk meg!</button>
+        <audio src="Buying PewDiePie a $1M Billboard in Times Square!.mp3">
+        </audio>
   </body>
  </html>
