--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title> Skrr gifs </title>
   </head>
   <body>
+    <div id="header">
     <h1> <em> Halla folkens! </em> nå skal jeg vise dere noen jeskla vittige <strong> bilder </strong>. </h1>
+    </div>
+    <div id=innhold>
     <h2> Numero uno </h2>
     <iframe src="https://giphy.com/embed/OQY2tMzBO8IoMCJdZV" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     <h2> -. ..- -- -- . .-. / - --- </h2>
